@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-12T16:14:25Z",
+  "timestamp" : "2022-06-13T08:14:27Z",
   "count_outdated" : 330,
   "uniques_outdated" : 176,
   "count" : 358,
-  "uniques" : 193,
+  "uniques" : 194,
   "clones" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-06-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
