@@ -1,3 +1,10 @@
+2022-06-13T08:14:27Z:
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 176 330 / 193 358
+* notice: next accum: outdated-unq outdated-all / unq all: 176 330 / 194 358
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-05-30 2022-06-13]
+
 2022-06-12T16:14:25Z:
 * notice: last 14d: unq all: 4 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 175 328 / 192 356
